fix: fix circular dep w/ generator
